--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
 	"dependencies": {
 		"bootstrap": "^5.3.3",
 		"bootstrap-icons": "^1.11.3",
+		"cors": "^2.8.5",
 		"prop-types": "^15.6.1",
 		"react": "^16.8.4",
 		"react-component-export-image": "^1.0.6",
