--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
 		"cors": "^2.8.5",
 		"prop-types": "^15.6.1",
 		"react": "^16.8.4",
+		"react-avatar-editor": "^13.0.2",
 		"react-component-export-image": "^1.0.6",
 		"react-dom": "^16.8.4",
 		"react-polyfills": "0.0.1",
