--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
 		"react-dom": "^16.8.4",
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "^6.3.0",
+		"react-to-print": "^3.0.2",
 		"three": "^0.170.0"
 	}
 }
